--- a/Trees/MC1R/README
+++ b/Trees/MC1R/README
@@ -3,9 +3,9 @@ MC1R: melanocortin 1 receptor
 
 This gene is found in the skin and also the retina. It plays a role in vision. 
 
-
 The data_set shows the information used to create these trees.
 
+The difference between _long and not _long is that long has a larger ESS.
 
 The original trees show what the trees look like before the posterior prabability was applied.
 
