--- a/Trees/RAG2/README
+++ b/Trees/RAG2/README
@@ -1,7 +1,6 @@
 Recombination-Activating Gene 2 (RAG2)
 
-This helps the RAG complex bind to and cut the DNA. Also, regulates the process and maintains genomic integrity. 
-This deals more with the immune system.
+This helps the RAG complex bind to and cut the DNA. Also, regulates the process and maintains genomic integrity. This deals more with the immune system.
 
 Data set is what was used to create the trees.
 
