--- a/Trees/MC1R/README
+++ b/Trees/MC1R/README
@@ -10,3 +10,5 @@ The difference between _long and not _long is that long has a larger ESS.
 The original trees show what the trees look like before the posterior prabability was applied.
 
 MCC and CCD0_MAP show what what happens when posterior probability and 95% Height is applied.  
+
+iqtree contains the information used, for both the data and the tree, along with a maximum likelihood tree picture. 
